# Restaurant_BE

./: .env  .env.example  PRD.md  README.md  alembic.ini  database.py  debug_roles.py  main.py  ormModels.py  pyproject.toml
alembic/: env.py
alembic/versions/: 066e1a4809ac_add_otp_columns_to_users.py  0f1d87039ef6_.py  2a97beb20076_.py  36d15ac975e0_.py  4437b06ed166_.py  48459ccca5c8_.py  4e4992f0691e_.py  85434aae170e_.py  99b096671b1f_.py  a5d451016c2d_.py  f95a268e2d51_.py
app/API/Category/: category_routers.py  category_service.py
app/API/Menu/: menu_routers.py  menu_service.py
app/API/Orders/: orders_routers.py  orders_service.py
app/API/Table/: table_routers.py  table_service.py
app/API/Upstock/: update_stock_routers.py  update_stock_service.py
app/API/User/: user_routers.py  user_service.py
app/API/auth/: auth_router.py  auth_service.py
app/API/staff/: staff_routers.py  staff_service.py
app/core/: auth.py  database.py  deps.py  security.py
app/models/Category/: category_schema.py
app/models/Menu/: menu_schema.py
app/models/Orders/: orders_schema.py
app/models/Staff/: staff_schema.py
app/models/Table/: table_schema.py
app/models/Update_Stock/: upstock_schema.py
app/models/User/: user_schema.py
app/models/token/: token_schema.py
security/: auth.py  security.py
